fixes height on safari bug

--- a/src/Layout/Feedback/Feedback.scss
+++ b/src/Layout/Feedback/Feedback.scss
@@ -71,7 +71,7 @@
       .loader2 {
         display: block;
         position: absolute;
-        top: 130px;
+        top: 138px;
         left: 50%;
         transform: translateX(-50%);
         height: 20px;
