--- a/src/Layout/Question/Question.scss
+++ b/src/Layout/Question/Question.scss
@@ -76,7 +76,7 @@
 
   .answers {
     position: absolute;
-    bottom: calc(10.5vh + 15px);
+    bottom: calc(8vh + 15px);
     list-style: none;
     width: 100%;
     padding: 0;
@@ -129,7 +129,7 @@
 
   .nextBtn {
     position: absolute;
-    bottom: 10.5vh;
+    bottom: 8vh;
     right: 8%;
     padding: 8px;
     font-size: 16px;
